# work-utils

./: pyproject.toml
src/workutils/: __init__.py
